@@ -26,6 +26,10 @@
      [clientloop.c log.c ssh.1 log.h]
      Add ~v and ~V escape sequences to raise and lower the logging level
      respectively. Man page help from jmc, ok deraadt jmc
+   - dtucker@cvs.openbsd.org 2012/09/06 09:50:13
+     [clientloop.c]
+     Make the escape command help (~?) context sensitive so that only commands
+     that will work in the current session are shown.  ok markus@
 
 20120830
  - (dtucker) [moduli] Import new moduli file.
